# wpsd

./: .gitignore  Makefile.in  README.md  configure  configure.ac  logger.c  logger.h  nmea.c  provider.h  upp.c  upp.h  upp_provider.h  uppd.c  uppd.conf  uppd.service.in  utils.c  utils.h  wps.c  wpsapi.c  wpsd.c  wpsd.conf  wpsd.service.in
wpsapi/documentation/html/: _certified_signature_test_java-example.html  _certified_signature_test_php-example.html  annotated.html  changelog.html  classes.html  deprecated.html  examples.html  files.html  functions.html  functions_vars.html  globals.html  globals_enum.html  globals_eval.html  globals_func.html  globals_type.html  index.html  installation.html  license.html  locationsettings.html  locationsettings_8dox.html  main.html  pages.html  patents.html  struct_w_p_s___geo_fence.html  struct_w_p_s___i_p_location.html  struct_w_p_s___location.html  struct_w_p_s___name_code.html  struct_w_p_s___simple_authentication.html  struct_w_p_s___street_address.html  tree.html  wpsapi_8h.html  wpsapi_8h_source.html  wpsapitest.cpp-example.html
wpsapi/documentation/html/search/: all_61.html  all_63.html  all_68.html  all_6c.html  all_6e.html  all_70.html  all_72.html  all_73.html  all_74.html  all_75.html  all_77.html  classes_77.html  enums_77.html  enumvalues_77.html  files_6c.html  files_77.html  functions_77.html  search.js  typedefs_77.html  variables_62.html  variables_69.html  variables_6c.html  variables_77.html
